--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    //liberary for the size and marge
+    //library for the size and marge
+
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
     implementation 'com.intuit.ssp:ssp-android:1.0.5'
 }
