--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
+        android:name=".Scenarios.ScenarioSeven.Controller.BaseApplication"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".Scenarios.ScenarioThree.Controller.Who_Are"/>
-        <activity android:name=".Scenarios.ScenarioSeven.Controller.Product"/>
-        <activity android:name=".Scenarios.ScenarioSeven.Controller.Product_Details"/>
-        <activity android:name=".Scenarios.ScenarioSeven.Controller.My_Cart"></activity>
-        <activity android:name=".Scenarios.ScenarioSex.Controller.Home" />
+        <activity android:name=".Scenarios.ScenarioThree.Controller.Who_Are" />
+        <activity android:name=".Scenarios.ScenarioSeven.Controller.Product" />
         <activity android:name=".Scenarios.ScenarioThree.Controller.Change_Pass" />
         <activity android:name=".Scenarios.ScenarioThree.Controller.Edit_Profile" />
         <activity android:name=".Scenarios.ScenarioTwo.Controller.Sign_Up" />
         <activity android:name=".Scenarios.ScenarioTwo.Controller.SignIn" />
         <activity android:name=".Scenarios.ScenarioOne.Controller.SplashActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
