--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".Utils.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
-        android:name=".Scenarios.ScenarioSeven.Controller.BaseApplication"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".Scenarios.ScenarioThree.Controller.FAQ"></activity>
         <activity android:name=".Scenarios.ScenarioThree.Controller.Who_Are" />
         <activity android:name=".Scenarios.ScenarioSeven.Controller.Product" />
         <activity android:name=".Scenarios.ScenarioThree.Controller.Change_Pass" />
@@ -23,7 +23,6 @@
         <activity android:name=".Scenarios.ScenarioTwo.Controller.Sign_Up" />
         <activity android:name=".Scenarios.ScenarioTwo.Controller.SignIn" />
         <activity android:name=".Scenarios.ScenarioOne.Controller.SplashActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
