--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+
+        maven { url 'https://jitpack.io' }
+
+    }
 }
 
 dependencies {
@@ -63,6 +69,19 @@ dependencies {
 
     //expendable TextView for FAQ
     implementation 'com.ms-square:expandableTextView:0.1.4'
+
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+
+    // animation library
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    //Custom Toast Library
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+
+    //lotti
+    implementation 'com.airbnb.android:lottie:3.2.0'
+
 
 
 }
