--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,10 @@ dependencies {
     //lotti
     implementation 'com.airbnb.android:lottie:3.3.1'
 
+    //gif imageview
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
+
 
 
 }
