--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <application
         android:name=".Utils.BaseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/appicon"
+        android:icon="@drawable/rostologo1"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/appicon"
+        android:roundIcon="@drawable/rostologo1"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar"
+        android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Scenarios.ScenarioThree.Controller.FAQ"></activity>
         <activity android:name=".Scenarios.ScenarioThree.Controller.Who_Are" />
